set(DEP_PATH "${PROJECT_SOURCE_DIR}/dep")

file(GLOB SRC "*.cpp" "*.hpp" "*.h" "*.c")
set(EXE_NAME nettest)
source_group("" FILES ${SRC})
ADD_EXECUTABLE(${EXE_NAME} ${SRC})
if(UNIX)
target_link_libraries(${EXE_NAME} ${OPENSSL_LIBRARY} ${THREAD_LIBRARY}  m dl)
else()
target_link_libraries(${EXE_NAME} ${OPENSSL_LIBRARY} ${THREAD_LIBRARY})
endif()
